server/config/os/oauth_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: file-retriever-server-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spi-oauth-service
  tls:
    termination: edge
