server/config/os/scm_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: file-retriever-server-service
  namespace: spi-scm
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: spi-scm-file-retriever-server-service
  tls:
    termination: edge
